<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductFragment">


    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/right_DrawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


                <RelativeLayout
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/Goiy"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="5dp"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/g_i"/>

                    <Button
                        android:layout_marginTop="5dp"
                        android:id="@+id/btnLoc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:background="#FFE608"
                        android:text="@string/l_c" />
                    <Button
                        android:layout_marginTop="5dp"
                        android:text="@string/h_y"
                        android:background="#FB7C5C"
                        android:id="@+id/btnHuyLoc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true" />

                    <TextView
                        android:textColor="@color/colorPrimaryDark"
                        style="@style/FirebaseUI.TextInputEditText.EmailField"
                        android:id="@+id/tvSamsung"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_toEndOf="@+id/Goiy"
                        android:text="@string/samsung" />

                    <TextView
                        android:textColor="@color/colorPrimaryDark"
                        style="@style/FirebaseUI.TextInputEditText.EmailField"
                        android:id="@+id/tvIphone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_toEndOf="@+id/tvSamsung"
                        android:text="@string/iphone" />
                </RelativeLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewProduct"
                    android:background="#FF6C9E"
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
        </LinearLayout>
        <com.google.android.material.navigation.NavigationView
            android:id="@+id/right_navigation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="end">

            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <Spinner

                    android:id="@+id/spnCompany"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:inputType="number"
                    android:hint="@string/priceMin"
                    android:layout_marginTop="20dp"
                    android:layout_below="@+id/spnCompany"
                    android:id="@+id/edtPriceMin"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:autofillHints="" />
                <EditText
                    android:inputType="number"
                    android:hint="@string/priceMax"
                    android:layout_marginTop="5dp"
                    android:layout_below="@+id/edtPriceMin"
                    android:id="@+id/edtPriceMax"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:autofillHints="" />

                <Button
                    android:background="#FFE608"
                    android:id="@+id/btnChon"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:textSize="15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/l_c"/>
            </RelativeLayout>

        </com.google.android.material.navigation.NavigationView>
    </androidx.drawerlayout.widget.DrawerLayout>

</FrameLayout>