<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FF6C9E"
    tools:context=".BuyActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/buyToolbar"
        android:background="@color/colorPrimary"
        app:title="@string/title_buy"
        app:titleTextColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textSize="18sp"
            android:textColor="#FFC107"
            android:textStyle="italic|bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvRong"
            android:layout_centerInParent="true"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewShoppingCarts"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/linearLayoutBottom"/>
        <LinearLayout
            android:background="@android:color/white"
            android:layout_alignParentBottom="true"
            android:id="@+id/linearLayoutBottom"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:weightSum="3">
            <LinearLayout
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:textColor="#000000"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/TotalPrice"/>
                <TextView
                    android:layout_marginStart="10dp"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="#FB0101"
                    android:id="@+id/tvTotalPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <Button
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:background="#FA3C00"
                android:text="@string/Pay"
                android:id="@+id/btnPay"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>